syntax = "proto3";
package cosmos.accumulator;

import "google/protobuf/any.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/accumulator/types";

message Admin {
  string address = 1;

  int64 vesting_period = 2;

  cosmos.base.v1beta1.Coin reward_per_period = 3 [(gogoproto.nullable) = false];

  int64 vesting_periods_count = 4;

  int64 last_vesting_time = 5;

  int64 vesting_counter = 6;

  string denom = 7;
}


